--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
 
 
 body{
-    background-image: linear-gradient(90deg, #00274c9a 0%, #fff 20%, #fff 80%, #00274c9a 100%);
     color: #00274C;
 }
 
@@ -12,6 +11,7 @@ h1 {
     font-size: larger;
     font-weight: bolder;
     text-align: center;
+    padding: 10px;
 }
 
 h2, h3 {
@@ -32,5 +32,245 @@ img {
 }
 
 li {
-    margin-left: 50px;
+    margin-left: 50px;  
 }
+
+
+/*                                                                          STYLING FOR MOBILE VIEW (DEFAULT) */
+
+
+/* ------------------------ START HEADER ELEMENTS ---------------------- */
+
+/* Skip to Main Styling */
+
+.skip a{
+    background: white;
+    color: #00274C;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
+    position: relative;
+    top: -40px;
+}
+
+.skip a:focus {
+    top: 20px;
+    color: #00274C;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+    html{
+        scroll-behavior: auto; /* Removes scroll animation */
+    }
+  
+    .skip a{
+      -webkit-transition: none; /* sets to default setting */
+      transition: none;        /* sets to default setting */
+     }
+  
+}
+
+/* END: Skip to Main Styling */
+
+.Topnav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.Topnav img {
+    border: none;
+    max-width: 15%;
+    margin: 0;
+    background-color: #00274C;
+    border-radius: 0;
+    padding: 0;
+}
+
+.search-bar {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    max-width: 50%;
+    padding-right: 10px;
+}
+
+.search-bar input {
+    grid-column: 1 / 5;
+    padding: 6px;
+    font-size: 8px;
+    border: 2px solid #FFCB05;
+    border-radius: 4px 0 0 4px;
+    width: 100%;
+}
+
+.search-bar button {
+    grid-column: 5 / -1;
+    background-color: #FFCB05;
+    border: none;
+    padding: 2px 3px;
+    cursor: pointer;
+    border-radius: 0 4px 4px 0;
+}
+
+.search-bar button img {
+    min-width: 50%;
+    background-color: transparent;
+}
+
+
+
+nav{
+    /* background-color: rgba(0, 50, 106, 0.80); */
+    background-image: url(/images/UMSI_CampusFall_UMSIBackpack_02.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    text-align: left;
+}
+
+nav ul {
+    background-color: #00274c;
+    border: solid 2px #00174c;
+    padding: 10px 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+}
+
+nav li{
+    display: inline;
+    height: 100%;
+    vertical-align: middle;
+    margin: 0;
+}
+
+
+nav a:focus, nav a:hover {
+    /* outline: 2px solid #FFCB05; */
+    text-decoration: underline #FFCB05;
+    color: #FFCB05;
+    outline-offset: 4px;
+}
+
+nav a{
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: none; 
+    font-size: xx-small;
+}
+
+
+
+
+/* --------------------- START MAIN STYLING ------------------ */
+
+
+
+
+
+/* ------------------- START FOOTER ELEMENTS ------------------ */
+
+footer {
+    padding: 10px 0;
+    background-color: #00274c;
+    display: flex;
+    justify-content: center;
+    color: white;
+}
+
+footer a {
+    color: white;
+}
+
+
+/*                                                                          STYLING FOR LAPTOP AND DESKTOP VIEW */
+
+
+
+
+
+
+@media screen and (min-width: 800px) {
+    
+    
+    .Topnav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .Topnav img {
+        max-width: 15%;
+    }
+
+
+    .search-bar {
+        display: flex;
+        align-items: center;
+        max-width: 50%;
+        padding-right: 10px;
+    }
+
+
+    .search-bar input {
+        padding: 6px;
+        font-size: 16px;
+        border: 2px solid #FFCB05;
+        border-radius: 4px 0 0 4px;
+        width: 100%;
+    }
+
+    .search-bar button {
+        background-color: #FFCB05;
+        border: none;
+        padding: 6px 12px;
+        cursor: pointer;
+        border-radius: 0 4px 4px 0;
+    }
+
+    .search-bar button img {
+        max-width: 20px; /* Small icon size */
+        background-color: transparent;
+    }
+
+    nav{
+        /* background-color: rgba(0, 50, 106, 0.80); */
+        background-image: url(/images/UMSI_CampusFall_UMSIBackpack_02.jpg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        text-align: left;
+    }
+
+    nav ul {
+        background-color: #00274c;
+        border: solid 2px #00174c;
+        padding: 10px 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    nav li{
+        display: inline;
+        padding: 0 20px;
+        height: 100%;
+        vertical-align: middle;
+    }
+
+
+    nav a:focus, nav a:hover {
+        /* outline: 2px solid #FFCB05; */
+        text-decoration: underline #FFCB05;
+        color: #FFCB05;
+        outline-offset: 4px;
+    }
+
+    nav a{
+        color: #ffffff;
+        font-weight: bold;
+        text-decoration: none; 
+    }
+
+
+}
+
