--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,20 @@ body{
 }
 
 h1 {
-    font-size: larger;
+    font-size: normal;
     font-weight: bolder;
     text-align: center;
     padding: 10px;
 }
 
 h2, h3 {
-    font-size: medium;
+    font-size: small;
     font-weight: bold;
     color: #00274C;
 }
 
 p {
+    font-size: smaller;
     line-height: 1.5;
 }
 
@@ -32,7 +33,8 @@ img {
 }
 
 li {
-    margin-left: 50px;  
+    font-size: smaller;
+    margin-left: 40px;  
 }
 
 
@@ -82,7 +84,7 @@ li {
 
 .Topnav img {
     border: none;
-    max-width: 15%;
+    max-width: 20%;
     margin: 0;
     background-color: #00274C;
     border-radius: 0;
@@ -99,7 +101,7 @@ li {
 .search-bar input {
     grid-column: 1 / 5;
     padding: 6px;
-    font-size: 8px;
+    font-size: small;
     border: 2px solid #FFCB05;
     border-radius: 4px 0 0 4px;
     width: 100%;
@@ -133,14 +135,15 @@ nav ul {
     background-color: #00274c;
     border: solid 2px #00174c;
     padding: 10px 0;
-    display: grid;
+    display: flex;
+    text-wrap: wrap;
+    text-align: center;
     grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
+    justify-content: space-evenly;
 }
 
 nav li{
-    display: inline;
-    height: 100%;
+    display: inline;  
     vertical-align: middle;
     margin: 0;
 }
@@ -157,7 +160,7 @@ nav a{
     color: #ffffff;
     font-weight: bold;
     text-decoration: none; 
-    font-size: xx-small;
+    font-size: 9pt;
 }
 
 
@@ -193,15 +196,39 @@ footer a {
 
 @media screen and (min-width: 800px) {
     
+    h1 {
+        font-size: larger;
+        font-weight: bolder;
+        text-align: center;
+        padding: 10px;
+    }
+    
+    h2, h3 {
+        font-size: medium;
+        font-weight: bold;
+        color: #00274C;
+    }
+    
+    p {
+        font-size: 9pt;
+        line-height: 1.5;
+    }
+    
+    img {
+        border: solid 5px #FFCB05;
+        padding: 10px;
+        margin: 20px;
+        border-top-right-radius: 30px;
+    }
+    
+    li {
+        margin-left: 50px;  
+    }
     
     .Topnav {
         display: flex;
         align-items: center;
         justify-content: space-between;
-    }
-
-    .Topnav img {
-        max-width: 15%;
     }
 
 
