--- a/css/style.css
+++ b/css/style.css
@@ -5,38 +5,58 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
 
 body{
     color: #00274C;
+    background-color: rgb(237 236 236);
 }
 
 h1 {
-    font-size: normal;
+    font-size: 1.5rem;
     font-weight: bolder;
     text-align: center;
     padding: 10px;
+    color: #ffffff;
+    background-color: #00274c;
 }
 
-h2, h3 {
-    font-size: small;
+h2 {
+    font-size: 1.2rem;
     font-weight: bold;
     color: #00274C;
+    padding: 0 0 12px 0;
+    text-align: center;
+    padding: 10px 0;
+}
+
+h3 {
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 8px;
 }
 
 p {
-    font-size: smaller;
+    font-size: 0.9rem;
     line-height: 1.5;
 }
 
 img {
     border: solid 5px #FFCB05;
-    padding: 10px;
-    margin: 20px;
-    border-top-right-radius: 30px;
+    margin: 10px;
+    border-radius: 10px;
+    width: 25%;
 }
 
 li {
-    font-size: smaller;
+    font-size: 0.9rem;
     margin-left: 40px;  
 }
 
+section {
+    padding: 10px 10px 20px;
+}
+
+header {
+    padding-bottom: 20px;
+}
 
 /*                                                                          STYLING FOR MOBILE VIEW (DEFAULT) */
 
@@ -134,7 +154,8 @@ nav{
 
 nav ul {
     background-color: #00274c;
-    border: solid 2px #00174c;
+    border-bottom: solid 2px #ffffff;
+    border-top: solid 2px #ffffff;
     padding: 10px 0;
     display: flex;
     text-wrap: wrap;
@@ -147,6 +168,12 @@ nav li{
     display: inline;  
     vertical-align: middle;
     margin: 0;
+    padding: 0 5px;
+    border-right: solid 1px #ffffff;
+}
+
+nav ul li:last-child {
+    border-right: none;
 }
 
 
@@ -161,7 +188,7 @@ nav a{
     color: #ffffff;
     font-weight: normal;
     text-decoration: none; 
-    font-size: 9pt;
+    font-size: normal;
 }
 
 .active {
@@ -170,11 +197,143 @@ nav a{
 }
 
 
+header section {
+    text-align: center;
+    max-height: 200px;
+    overflow: auto;
+}
+
+
 
 
 /* --------------------- START MAIN STYLING ------------------ */
 
 
+/* Home unqiue styling */
+
+
+
+
+/* Academic Support unqiue styling */
+
+.sectionBlock {
+    border-top: dashed  2px #00274C;
+    margin: 0 8px;
+    
+}
+
+.profiles {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    justify-items: center;
+}
+
+.profiles div {
+    display: block;
+    text-align: center;
+}
+.profiles img {
+    width: 90%;
+    margin-bottom: 0;
+}
+
+.p1 {
+    grid-column: 1 / 3;
+}
+
+.p2 {
+    grid-column: 3 / 5;
+}
+
+.p3 {
+    grid-column: 5 / -1;
+}
+
+.p4 {
+    grid-column: 1 / 4;
+}
+
+.p5 {
+    grid-column: 4 / -1;
+}
+
+
+.degreeReqs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    align-items: center;
+}
+
+.degreeReqs div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
+    text-align: center;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.degreeReqs img {
+    width: 80%;
+}
+
+.degreeReqs li {
+    margin: 0;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-content: space-evenly;
+    padding: 10px 0;
+
+}
+
+.buttons a {
+    background-color: #FFCB05;
+    padding: 5px;
+    margin: 15px;
+    border: solid 2px #ffbc05;
+    border-radius: 20px;
+    color: #00274C;
+    line-height: 1.5;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+}
+
+.buttons a:hover, .buttons a:focus {
+    text-decoration: underline;
+}
+
+
+.columnBtns {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.columnBtns li {
+    border: solid 1px #00274C;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 5px;
+}
+
+.tutorsection {
+    text-align: center;
+}
+
+
+
+/* Student Life unique styling */
+
+
+
+
+/* Student Wellbeing unique styling */
 
 
 
@@ -198,7 +357,7 @@ footer a {
 @media screen and (min-width: 800px) {
     
     h1 {
-        font-size: larger;
+        font-size: 2rem;
     }
     
     h2, h3 {
