--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@ header {
     padding-bottom: 10px;
 }
 
+
+
 /*                                                                          STYLING FOR MOBILE VIEW (DEFAULT) */
 
 
@@ -263,15 +265,16 @@ header section {
     padding: 10px 5px;
     margin: 5px;
     background-color: #ffffff;
+    width: 100%;
 }
 
-.altresources div:hover, .altresources div:focus {
+.altresources article div:hover, .altresources article div:focus {
     box-shadow: 0 0 20px #00274C;
 
 }
 
 .resources a {
-    color: #00274C;
+    color: #0058ab;
 }
 
 .calendar-container {
@@ -419,7 +422,7 @@ header section {
 /* Student Wellbeing unique styling */
 
 .altsection {
-    margin: 20px 0;
+    margin: 20px 10px;
 }
 
 .altsection article {
