--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,7 @@ footer a {
 
 /*                                                                          STYLING FOR LAPTOP AND DESKTOP VIEW */
 
+/*
 @media screen and (min-width: 800px) {
     
     h1 {
@@ -545,4 +546,4 @@ footer a {
     }
 
 }
-
+*/
